@@ -1,11 +1,35 @@
-FROM alpine:3.19.0
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US:en
-ENV LC_ALL en_US.UTF-8
-ENV TZ=Etc/UTC
-ARG ZULU_KEY_SHA256=6c6393d4755818a15cf055a5216cffa599f038cd508433faed2226925956509a
-RUN wget --quiet https://cdn.azul.com/public_keys/alpine-signing@azul.com-5d5dc44c.rsa.pub -P /etc/apk/keys/ && \
-    echo "${ZULU_KEY_SHA256}  /etc/apk/keys/alpine-signing@azul.com-5d5dc44c.rsa.pub" | sha256sum -c - && \
-    apk --repository https://repos.azul.com/zulu/alpine --no-cache add zulu11-jre~=11.0.21 tzdata  && rm -rf /var/cache/apk/*
+FROM azul/zulu-openjdk-alpine:11-jre as packager
 
-ENV JAVA_HOME=/usr/lib/jvm/zulu11
+RUN { \
+        java --version ; \
+        echo "jlink version:" && \
+        jlink --version ; \
+    }
+
+ENV JAVA_MINIMAL=/opt/jre
+
+# build modules distribution
+RUN jlink \
+    --verbose \
+    --add-modules \
+        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
+        # java.naming - javax/naming/NamingException
+        # java.desktop - java/beans/PropertyEditorSupport
+        # java.management - javax/management/MBeanServer
+        # java.security.jgss - org/ietf/jgss/GSSException
+        # java.instrument - java/lang/instrument/IllegalClassFormatException
+    --compress 2 \
+    --strip-debug \
+    --no-header-files \
+    --no-man-pages \
+    --output "$JAVA_MINIMAL"
+
+# Second stage, add only our minimal "JRE" distr and our app
+FROM alpine:3.19.0
+
+ENV JAVA_MINIMAL=/opt/jre
+ENV PATH="$PATH:$JAVA_MINIMAL/bin"
+
+COPY --from=packager "$JAVA_MINIMAL" "$JAVA_MINIMAL"
+
+ENTRYPOINT [ "java" ]
